# CUDA_OpenCV

./: CMakeLists.txt  Config.h.in  README.md
include/01_Lession/: rgba_to_grey.h
src/01_Lession/: CMakeLists.txt  cudev.cuh  rgba_to_grey.cu
test/: main.cpp
